[feature/MANDA_32] Добавил swagger эндпоинт; Поправил конфигурацию разных сред и конфигурацию развертывания
