# docs/api/openapi.yaml
@@ -27,6 +27,48 @@ paths:
       summary: Health
       tags:
         - Metrics API
+  /swagger/api-docs.json:
+    get:
+      description: Request for getting swagger specification in JSON
+      operationId: Swagger API specification in JSON
+      responses:
+        "200":
+          description: OK
+          content:
+            application/yaml:
+              schema:
+                type: string
+      summary: Swagger JSON
+      tags:
+        - Swagger API
+  /swagger/api-docs.yaml:
+    get:
+      description: Request for getting swagger specification in YAML
+      operationId: Swagger API specification in YAML
+      responses:
+        "200":
+          description: OK
+          content:
+            application/yaml:
+              schema:
+                type: string
+      summary: Swagger YAML
+      tags:
+        - Swagger API
+  /swagger/index.html:
+    get:
+      description: Request for getting swagger UI
+      operationId: SwaggerUI
+      responses:
+        "200":
+          description: OK
+          content:
+            text/html:
+              schema:
+                type: string
+      summary: Swagger UI
+      tags:
+        - Swagger API
   /v0/account:
     delete:
       description: Request for deleting account. User must be logged in. User must not
@@ -913,6 +955,8 @@ tags:
     name: Resource API
   - description: API for getting metrics
     name: Metrics API
+  - description: API for getting swagger documentation
+    name: Swagger API
 servers:
   - url: //localhost:8080
 components:
